lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:18: error: illegal start of simple expression
		else if((getVitesseY()>(-10))&&getAngle==0)){
                                                           ^